infra/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hiraoyogizzard
  labels:
    app: hiraoyogizzard
